Bump equalsverifier from 3.4.2 to 3.4.3 (#1993)
* Bump equalsverifier from 3.4.2 to 3.4.3

Bumps [equalsverifier](https://github.com/jqno/equalsverifier) from 3.4.2 to 3.4.3.
- [Release notes](https://github.com/jqno/equalsverifier/releases)
- [Changelog](https://github.com/jqno/equalsverifier/blob/main/CHANGELOG.md)
- [Commits](https://github.com/jqno/equalsverifier/compare/equalsverifier-3.4.2...equalsverifier-3.4.3)

Signed-off-by: dependabot[bot] <support@github.com>

* Fix property

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Stefano Cordio <stefano.cordio@gmail.com>